--- a/sweet-material-table-styles.html
+++ b/sweet-material-table-styles.html
@@ -300,6 +300,14 @@
       #table #loadingIndicator[active] {
         display: block;
       }
+
+      div.sweet-material-table-item {
+        text-overflow: ellipsis;
+        width: 100%;
+        word-wrap: normal;
+        white-space: nowrap;
+        overflow: hidden;
+      }
     </style>
   </template>
 </dom-module>
